objects/Bill_To_Site__c.object
<CustomObject>
    <description>Bill to site from Oracle ERP</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address3__c</fullName>
        <label>Address3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Account__c</fullName>
        <label>Dealer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bill to Site</relationshipLabel>
        <relationshipName>Bill_to_Site</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Interface_Message__c</fullName>
        <label>Interface Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interface_Status__c</fullName>
        <label>Interface Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to SOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Oracle_Billto_Association__c</fullName>
        <label>Oracle Billto Association</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Oracle_County__c</fullName>
        <label>Oracle County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Location_id__c</fullName>
        <label>Oracle Location id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oracle_Operating_Unit_Code__c</fullName>
        <description>Cash Flow- Existing oracle operating unit field maps the partner account number instead of operating unit. We need the actual operating unit (SPNA OU, SPEB OU) to query and find one bill to site to send to Oracle via OrderIntegrationService. SOA Integraion will populate this field for all primary addresses every 1 hour. OrderAppController class will read this value to populate bill to address on the PO.</description>
        <label>Oracle Operating Unit Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Operating_Unit__c</fullName>
        <label>Oracle Operating Unit</label>
        <picklist>
            <picklistValues>
                <fullName>SPCN OU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPDE OU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPEB OU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPES OU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPKR OU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPMLL OU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPNA OU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPPT OU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPSA OU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPSV OU</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Oracle_Price_List__c</fullName>
        <label>Oracle Price List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Primary__c</fullName>
        <label>Oracle Primary</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Oracle_Salesperson__c</fullName>
        <label>Oracle Salesperson</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Portal_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, means the record has been created via partner portal registration process</description>
        <label>Partner Portal Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_ID__c</fullName>
        <description>Oracle Site ID</description>
        <externalId>true</externalId>
        <label>Site ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Bill to Site</label>
    <listViews>
        <fullName>All</fullName>
        <booleanFilter>1 or 2 or 3</booleanFilter>
        <columns>Dealer_Account__c</columns>
        <columns>Site_ID__c</columns>
        <columns>Address1__c</columns>
        <columns>Address2__c</columns>
        <columns>City__c</columns>
        <columns>Country__c</columns>
        <columns>State__c</columns>
        <columns>Zip__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>IT</value>
        </filters>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>DE</value>
        </filters>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>ES</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bill To Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bill to Site</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>No_Bill_to_Site_for_Child_Partners</fullName>
        <active>true</active>
        <description>Prevent the creation of bill to sites for builder partners that are children. This is for new homes.</description>
        <errorConditionFormula>Dealer_Account__r.RecordType.Name = &apos;Partner&apos; &amp;&amp;  NOT( ISBLANK(Dealer_Account__r.ParentId)) &amp;&amp; TEXT(Dealer_Account__r.Type) = &apos;Builder&apos;</errorConditionFormula>
        <errorMessage>Child accounts cannot have bill to sites, please manage the bill to site at the parent account level.</errorMessage>
    </validationRules>
</CustomObject>